Include tests in sdist

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ envlist = py26,py27,py32,py33,py34,py35,pypy
 
 [testenv]
 deps = mock
-commands = python test.py
+commands = python mpd_test.py
 
 [testenv:py26]
 deps = mock
        unittest2
-commands = python test.py
+commands = python mpd_test.py
