--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,28 @@
 # Packages
 *.egg
 *.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
+/dist
+/build
+/eggs
+/parts
+/bin
+/var
+/sdist
+/develop-eggs
+/.installed.cfg
+/lib
+/lib64
+/include
+/local
 
 # Installer logs
-pip-log.txt
+/pip-selfcheck.json
+/pip-log.txt
 
 # Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
+/.coverage
+/.tox
+/nosetests.xml
 
 # Sphinx docs
-doc/_build
+/doc/_build
