tox -> run tests with coverage

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,17 @@ envlist = py26,py27,py32,py33,py34,py35,pypy
 
 [testenv]
 deps = mock
-commands = python mpd_test.py
+       coverage
+commands = coverage erase
+           coverage run mpd_test.py
+           coverage report
+           coverage html -d coverage_html/{envname}
 
 [testenv:py26]
 deps = mock
        unittest2
-commands = python mpd_test.py
+       coverage
+commands = coverage erase
+           coverage run mpd_test.py
+           coverage report
+           coverage html -d coverage_html/{envname}
