improve package structure

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py26,py27,py32,py33,py34,py35,pypy
 deps = mock
        coverage
 commands = coverage erase
-           coverage run mpd_test.py
+           coverage run mpd/tests.py
            coverage report
            coverage html -d coverage_html/{envname}
 
@@ -14,6 +14,6 @@ deps = mock
        unittest2
        coverage
 commands = coverage erase
-           coverage run mpd_test.py
+           coverage run mpd/tests.py
            coverage report
            coverage html -d coverage_html/{envname}
