--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [sdist]
-formats=bztar,gztar,zip
+formats = bztar,gztar,zip
 
 [build_sphinx]
 source-dir = doc/
@@ -8,3 +8,6 @@ all_files = 1
 
 [upload_sphinx]
 upload-dir = doc/_build/html
+
+[easy_install]
+
