Add tests for twisted client

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ envlist = py26,py27,py32,py33,py34,py35,pypy
 [testenv]
 deps = mock
        coverage
+       Twisted
 commands = coverage erase
-           coverage run mpd/tests.py
+           coverage run -m unittest mpd.tests
            coverage report
            coverage html -d coverage_html/{envname}
 
@@ -13,7 +14,8 @@ commands = coverage erase
 deps = mock
        unittest2
        coverage
+       Twisted
 commands = coverage erase
-           coverage run mpd/tests.py
+           coverage run -m unittest mpd.tests
            coverage report
            coverage html -d coverage_html/{envname}
