--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ matrix:
     - python: nightly
 
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION != '3.4' ]]; then pip install Twisted; fi
+  - pip install Twisted
 
 script: python -m unittest mpd.tests
