--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,11 @@ upload-dir = doc/_build/html
 
 [easy_install]
 
+[mypy-twisted.*]
+ignore_missing_imports = True
+
+[mypy-setuptools.*]
+ignore_missing_imports = True
+
+[mypy-tox.*]
+ignore_missing_imports = True
