--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,16 +3,13 @@ on:
   pull_request:
   push:
 jobs:
-  mypy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: cachix/install-nix-action@v12
-    - run: nix-shell -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixpkgs-unstable.tar.gz -p mypy --run 'mypy .'
-
   tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v12
-    - run: nix-shell -I nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixpkgs-unstable.tar.gz --run 'tox'
+      with:
+        nix_path: nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixpkgs-unstable.tar.gz
+    - name: run tests
+      run:
+        nix-shell --run 'tox'
