tests: Use built-in unittest.mock instead of external mock
A built-in unittest.mock module is available since Python 3.3 that
is a drop-in replacement for the external mock package.  Since Python 2
is not supported, just use that and remove the dependency.

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,7 @@
 envlist = py36,py37,py38,py39,pypy3
 
 [testenv]
-deps = mock
-       coverage
+deps = coverage
        Twisted
 commands = coverage erase
            coverage run -m unittest mpd.tests
